<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="verse"
            type="com.jumbox.app.muslim.vo.Verse" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        android:paddingTop="@dimen/margin_8"
        android:paddingBottom="@dimen/margin_8">

        <TextView
            android:id="@+id/tv_ayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kitab"
            android:textDirection="rtl"
            app:verse="@{verse.text}"
            app:number="@{verse.number}"
            android:textSize="@dimen/tv_quran"
            android:layout_alignParentEnd="true"
            tools:text="@string/basmallah" />

        <TextView
            android:id="@+id/tv_number_latin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tv_ayat"
            android:text="@{verse.number + ``}"
            android:textSize="@dimen/tv_normal"
            android:textColor="@color/green_700"
            tools:text="1" />

        <TextView
            android:id="@+id/tv_latin"
            android:layout_below="@id/tv_ayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/tv_number_latin"
            android:textSize="@dimen/tv_normal"
            android:textColor="@color/green_700"
            app:htmlFormat="@{verse.latin}"
            tools:text="@string/basmallah_latin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tv_latin"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/tv_number_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{verse.number + ``}"
                android:textSize="@dimen/tv_normal"
                tools:text="1" />

            <com.jumbox.app.muslim.utils.FlexBoxLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="end|center_vertical"
                android:gravity="start|center_vertical"
                app:viewPartMain="@id/tv_translation"
                app:viewPartSlave="@id/menu">

                <TextView
                    android:id="@+id/tv_translation"
                    android:layout_below="@id/tv_latin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tv_normal"
                    android:text="@{verse.translations.id}"
                    app:textEN="@{verse.translations.en}"
                    tools:text="@string/basmallah_translation" />

                <LinearLayout
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end|bottom">

                    <ImageButton
                        android:id="@+id/btn_tafsir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:padding="3dp"
                        android:tint="@color/colorIconDark"
                        android:src="@drawable/ic_quran"
                        android:contentDescription="@string/tafsir_ayat" />

                    <ImageButton
                        android:id="@+id/btn_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:padding="3dp"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:tint="@{verse.bookmark ? @android:color/holo_red_light : @color/colorIconDark}"
                        android:src="@drawable/ic_favorite_active"
                        tools:tint="@color/colorIconDark"
                        android:contentDescription="@{verse.bookmark ? `Remove Bookmark` : `Add bookmark`}" />

                    <ImageButton
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:padding="3dp"
                        android:tint="@color/colorIconDark"
                        android:src="@drawable/ic_share"
                        android:contentDescription="@string/share_ayat" />

                </LinearLayout>

            </com.jumbox.app.muslim.utils.FlexBoxLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>