<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.kiblat.KiblatActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@animator/appbar_elevation"
            android:theme="@style/Theme.IslamicApp.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:id="@+id/compass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.24000001">

                <FrameLayout
                    android:id="@+id/caaba_compass"
                    android:layout_width="340dp"
                    android:layout_height="340dp"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/BackgroundCompass"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/caaba"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top|center_horizontal"
                        android:src="@drawable/ic_caaba"
                        tools:ignore="ContentDescription" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/indicator"
                    android:layout_width="285dp"
                    android:layout_height="285dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_compass_titik"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|top"
                        android:layout_marginTop="45dp"
                        android:text="@string/north"
                        android:textSize="@dimen/tv_big"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginBottom="45dp"
                        android:text="@string/south"
                        android:textSize="@dimen/tv_big"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginStart="45dp"
                        android:text="@string/west"
                        android:textSize="@dimen/tv_big"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="45dp"
                        android:text="@string/east"
                        android:textSize="@dimen/tv_big"
                        android:textStyle="bold" />

                </FrameLayout>

                <ImageView
                    android:id="@+id/arrow_compass"
                    android:layout_width="285dp"
                    android:layout_height="285dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_compass_arrow"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <TextView
                android:id="@+id/province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/tv_normal"
                app:layout_constraintBottom_toTopOf="@+id/notif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/compass"
                app:layout_constraintVertical_bias="0.19999999"
                tools:text="Bengkulu" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/tv_normal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/province"
                tools:text="Bengkulu Tengah" />

            <TextView
                android:id="@+id/notif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/message_kiblat"
                android:textSize="@dimen/tv_normal"
                app:layout_constraintBottom_toTopOf="@+id/layout_ad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                android:id="@+id/layout_ad"
                layout="@layout/layout_ad_bannner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>